# hive-software

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE_MIT  README.md  TODO.md  cargo.toml  cross-build-monitor.sh  renovate.json
.cargo/: config.toml
assets/: software_overview.drawio
comm-types/: Cargo.toml  README.md
comm-types/src/: auth.rs  bincode.rs  cbor.rs  hardware.rs  ipc.rs  lib.rs  results.rs  test.rs  token.rs
comm-types/src/defines/: mod.rs  uid.rs
controller/: Cargo.toml  README.md
controller/src/: lib.rs  runner.rs
controller/src/common/: init.rs  mod.rs  target_stack_shield.rs  test_channel.rs
controller/src/common/hardware/: expanders.rs  mod.rs  probe.rs  target_stack_shield.rs  test_channel.rs
controller/src/common/logger/encoders/: cbor.rs  console.rs
controller/src/hardware/: expanders.rs  mod.rs  probe.rs  target_stack_shield.rs  test_channel.rs
controller/src/logger/: mod.rs
controller/src/logger/encoders/: cbor.rs  console.rs  json.rs  mod.rs
hive/: Cargo.toml  README.md
hive-backend/: README.md  (+4 more)
hive-backend-ui/: .eslintrc.cjs  .gitignore  README.md  codegen.ts  index.html  package-lock.json  package.json  schema.gql  tsconfig.app.json  vite.config.ts
hive-db/: Cargo.toml  README.md
hive-db/src/: db.rs  keys.rs  lib.rs
hive-db/tests/: test.rs
hive-db/tests/typesafety/: get.rs  get.stderr  insert.rs  insert.stderr  remove.rs  remove.stderr  transaction_get.rs  transaction_get.stderr  transaction_insert.rs  transaction_insert.stderr  transaction_remove.rs  transaction_remove.stderr
hive-macro/: Cargo.toml  README.md
hive-macro/src/: hive.rs  hive_test.rs  lib.rs
hive-macro/tests/: test.rs
hive-macro/tests/macro/hive/should_fail/: attribute_disallowed.rs  attribute_disallowed.stderr  attribute_syntax.rs  attribute_syntax.stderr  module_name.rs  module_name.stderr  module_no_body.rs  module_no_body.stderr  module_visibility.rs  module_visibility.stderr  unallowed_dependencies.rs  unallowed_dependencies.stderr  unallowed_dependencies_submodule.rs  unallowed_dependencies_submodule.stderr  unallowed_dependency_probe_rs.rs  unallowed_dependency_probe_rs.stderr
hive-macro/tests/macro/hive/should_pass/: passes.rs
hive-macro/tests/macro/hive_test/should_fail/: attribute_keys.stderr  function_argument_amount.stderr  function_argument_ident.rs  function_argument_ident.stderr  function_argument_immutability.rs  function_argument_immutability.stderr  function_argument_mutability.rs  function_argument_mutability.stderr  function_argument_reference.rs  function_argument_reference.stderr  function_argument_self.rs  function_argument_self.stderr  function_argument_type.rs  function_argument_type.stderr  function_privacy.rs  function_privacy.stderr  function_return.rs  function_return.stderr  function_syntax.rs  function_syntax.stderr
hive-macro/tests/macro/hive_test/should_pass/: passes.rs
hive-macro/tests/macro/should_fail/: attribute_keys.rs  attribute_syntax.rs  attribute_syntax.stderr  function_argument_amount.rs  function_argument_amount.stderr  function_argument_ident.rs  function_argument_ident.stderr  function_argument_immutability.stderr  function_argument_mutability.rs  function_argument_mutability.stderr  function_argument_reference.rs  function_argument_reference.stderr  function_argument_self.rs  function_argument_self.stderr  function_argument_type.rs  function_argument_type.stderr  function_privacy.stderr  function_return.stderr  function_syntax.stderr
hive-macro/tests/macro/should_pass/: passes.rs
hive-test/: Cargo.toml  README.md
hive-test/src/: lib.rs
hive/src/: client.rs  config.rs  main.rs  models.rs  validate.rs  workspace.rs
hive/src/request/: client.rs  mod.rs  token.rs
hive/src/subcommands/: connect.rs  list.rs  mod.rs  test.rs
ll-api/: Cargo.toml  README.md
ll-api/src/: lib.rs  pins.rs
ll-api/src/expander_gpio/: bus_switch.rs  daughterboard_detect.rs  mod.rs  status_led.rs
ll-api/src/rpi_gpio/: gpio.rs  mod.rs  uart.rs
monitor/: .gitignore  Cargo.toml  README.md
monitor/data/: .gitignore
monitor/data/seccomp/: runner_seccomp.bpf
monitor/data/testprograms/default/: README.md
monitor/data/testprograms/default/arm/: hive_defines.S  main.S
monitor/data/testprograms/default/riscv/: hive_defines.S  main.S
monitor/data/webserver/: .gitignore
monitor/data/webserver/static/: index.html
monitor/runner_seccomp/: .gitignore  README.md  makefile  runner_seccomp.c
monitor/src/: config.rs  flash.rs  init.rs  main.rs  test.rs
monitor/src/binaries/: address.rs  build.rs  mod.rs  testprogram.rs
monitor/src/binaries/hive_defines/: defines.rs  mod.rs
monitor/src/comm/: mod.rs
monitor/src/comm/ipc/: error.rs  extractors.rs  handlers.rs  middleware.rs  mod.rs
monitor/src/comm/webserver/: auth.rs  csrf.rs  handlers.rs  mod.rs
monitor/src/comm/webserver/backend/: auth.rs  mod.rs  model.rs  mutation.rs  query.rs
monitor/src/database/: hasher.rs  keys.rs  mod.rs  sync.rs
monitor/src/logger/: mod.rs
monitor/src/mode/: gql_schema.rs  init.rs  mod.rs  standalone.rs
monitor/src/tasks/: mod.rs  reinit_task.rs  scheduler.rs  test_task.rs  ws.rs
monitor/src/tasks/runner/: mod.rs  workspace.rs
monitor/src/tasks/runner/ipc/: handlers.rs  mod.rs
monitor/src/tasks/util/: mod.rs  sandbox.rs  subprocess.rs
monitor/src/tasks/util/ipc/: handlers.rs  mod.rs
monitor/src/test/: mod.rs
monitor/src/test/ipc/: handlers.rs  mod.rs
monitor/src/testmanager/: mod.rs  workspace.rs
monitor/src/testmanager/ipc/: handlers.rs  mod.rs
monitor/src/testprogram/: address.rs  build.rs  defines.rs  mod.rs
monitor/src/testprogram/defines/: mod.rs  uid.rs
monitor/src/webserver/: api_token.rs  auth.rs  csrf.rs  handlers.rs  mod.rs
monitor/src/webserver/backend/: auth.rs  mod.rs  model.rs  mutation.rs  query.rs
monitor/src/webserver/test/: handlers.rs  mod.rs  model.rs  mutation.rs  query.rs
runner/: Cargo.toml  README.md
runner/src/: comm.rs  hive.rs  hive_tests.rs  init.rs  main.rs  test.rs
runner/src/comm/: mod.rs  requests.rs  retry.rs
runner/src/hive/: mod.rs
(+64 files in other folders)
