[workspace]
resolver = "2"
members = [
	"ll-api",
	"comm-types",
	"controller",
	"hive-macro",
	"hive-test",
	"monitor",
	"runner",
	"hive",
	"hive-db",
]

[workspace.dependencies]
probe-rs = "0.22"
log = "0.4"
lazy_static = "1.4"
axum = "0.6"
chrono = "0.4"
hyper = "0.14"
tower = "0.4"
async-graphql = "5.0"
tokio = "1.17"
serde = "1.0"
serde_json = "1.0"
sled = "0.34"
thiserror = "1.0"
anyhow = "1.0"
bincode = "2.0.0-rc.3"
trybuild = "1.0"
inventory = "0.2"
embedded-hal-bus = "0.1"
clap = "4.4"
clap-verbosity-flag = "2.0"
dialoguer = "0.10"
colored = "2.0"
serial_test = "0.7"
pca9535 = "2.0"
embedded-hal = "1.0"
rppal = "0.17"
retry = "1.3"
antidote = "1.0"
# Testcandidate used in runner crate
probe-rs-test = { package = "probe-rs", path = "../probe-rs-hive-testcandidate/probe-rs/" }
