[workspace]
resolver = "2"
members = [
    "ll-api",
    "comm-types",
    "controller",
    "hive-macro",
    "hive-test",
    "monitor",
    "runner",
    "hive",
    "hive-db",
]

[workspace.dependencies]
probe-rs = { git = "https://github.com/probe-rs/probe-rs.git", rev = "a003183" } # Use master due to hidapi feature collision (https://github.com/probe-rs/probe-rs/pull/1842)
log = "0.4"
lazy_static = "1.5"
axum = "0.6"
chrono = "0.4"
hyper = "0.14"
tower = "0.4"
async-graphql = "5.0"
tokio = "1.17"
serde = "1.0"
serde_json = "1.0"
sled = "0.34"
thiserror = "2.0"
anyhow = "1.0"
bincode = "2.0.0-rc.3"
trybuild = "1.0"
inventory = "0.3"
embedded-hal-bus = "0.2"
clap = "4.5"
clap-verbosity-flag = "2.2"
dialoguer = "0.11"
colored = "2.1"
serial_test = "3.1"
pca9535 = "2.0"
embedded-hal = "1.0"
rppal = "0.17"
retry = "1.3"
antidote = "1.0"
nix = "0.29"
# Testcandidate used in runner crate
probe-rs-test = { package = "probe-rs", path = "../probe-rs-hive-testcandidate/probe-rs/" }
