[package]
name = "comm-types"
version = "0.1.0"
edition = "2021"
authors = ["TeyKey1"]
repository = "https://github.com/probe-rs/hive-software"
description = "Common types used for communication between Hive applications"
readme = "README.md"

[features]
hardware = []
cbor = []
ipc = ["hardware", "test", "cbor", "defines"]
test = []
auth = []
defines = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
http = "0.2"
axum = "0.6"
hyper = "0.14"
async-graphql = "5.0"
thiserror = "1.0"
uid = "0.1"
typetag = "0.1"
downcast-rs = "1.2"
dyn-clone = "1.0"

[dev-dependencies]
tower = "0.4"
tokio = {version  = "1.17", features = ["macros"]}