[package]
name = "comm-types"
version = "0.1.0"
edition = "2021"
authors = ["TeyKey1"]
repository = "https://github.com/probe-rs/hive-software"
description = "Common types used for communication between Hive applications"
readme = "README.md"

[features]
hardware = []
bincode = []
ipc = ["hardware", "test", "bincode", "defines"]
test = []
auth = []
defines = []
token = []

[dependencies]
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true, features = ["serde"] }
http = { workspace = true }
http-body-util = "0.1"
axum = { workspace = true }
hyper = { workspace = true }
async-graphql = { workspace = true }
thiserror = { workspace = true }
uid = "0.1"
typetag = "0.1"
downcast-rs = "1.2"
dyn-clone = "1.0"
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
tower = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
