[package]
name = "controller"
version = "0.1.0"
edition = "2021"
authors = ["TeyKey1"]
repository = "https://github.com/probe-rs/hive-software"
description = "Testrack hardware control routines and functions"
readme = "README.md"

[features]
runner = []

[dependencies]
ll-api = { path = "../ll-api/" }
comm-types = { path = "../comm-types/", features = ["hardware", "ipc"] }
hive-test = { path = "../hive-test/" }
pca9535 = { version = "1.2", features = ["std"] }
embedded-hal = "=1.0.0-alpha.9"
rppal = { version = "0.14", features = ["hal"] }
shared-bus = { version = "=0.2.5", features = ["std", "eh-alpha"] }
probe-rs = "0.13"
log = "0.4"
retry = "1.3"
antidote = "1.0"
thiserror = "1.0"
log4rs = { version = "1.1", features = [
    "console_appender",
    "rolling_file_appender",
    "threshold_filter",
] }
chrono = "0.4"
colored = "2.0"
anyhow = "1.0"
rusb = "0.9"
nix = "0.24"
serde_json = "1.0"
serde = "1.0"

probe-rs-test = { package = "probe-rs", path = "../probe-rs-testcandidate/probe-rs/" }
