[package]
name = "controller"
version = "0.1.0"
edition = "2021"
authors = ["TeyKey1"]
repository = "https://github.com/probe-rs/hive-software"
description = "Testrack hardware control routines and functions"
readme = "README.md"

[features]
runner = []

[dependencies]
ll-api = { path = "../ll-api/" }
comm-types = { path = "../comm-types/", features = ["hardware", "ipc"] }
pca9535 = { workspace = true, features = ["std"] }
embedded-hal = { workspace = true }
rppal = { workspace = true, features = ["hal"] }
embedded-hal-bus = { workspace = true, features = ["std"] }
probe-rs = { workspace = true }
log = { workspace = true }
retry = { workspace = true }
antidote = { workspace = true }
thiserror = { workspace = true }
log4rs = { version = "1.1", features = [
    "console_appender",
    "rolling_file_appender",
    "threshold_filter",
] }
chrono = "0.4"
colored = { workspace = true }
anyhow = { workspace = true }
rusb = "0.9"
nix = "0.24"
serde_json = { workspace = true }
serde = { workspace = true }

probe-rs-test = { workspace = true }
