[package]
name = "controller"
version = "0.1.0"
edition = "2021"
authors = ["TeyKey1"]
repository = "https://github.com/probe-rs/hive-software"
description = "Testrack hardware control routines and functions"
readme = "README.md"

[features]
monitor = ["probe-rs"]
runner = ["probe-rs-test"]

[dependencies]
ll-api = { path = "../ll-api/" }
comm-types = { path = "../comm-types/", features = ["hardware", "ipc"] }
pca9535 = { workspace = true, features = ["std"] }
embedded-hal = { workspace = true }
rppal = { workspace = true, features = ["hal"] }
embedded-hal-bus = { workspace = true, features = ["std"] }
log = { workspace = true }
retry = { workspace = true }
antidote = { workspace = true }
thiserror = { workspace = true }
log4rs = { version = "1.1", features = [
    "console_appender",
    "rolling_file_appender",
    "threshold_filter",
] }
chrono = { workspace = true }
colored = { workspace = true }
anyhow = { workspace = true }
rusb = "0.9"
serde_json = { workspace = true }
serde = { workspace = true }

# Depending on the usecase, the probe-rs dependency is either stable (used in monitor crate), or the one being tested by Hive (used in runner crate)
[dependencies.probe-rs]
workspace = true
optional = true

[dependencies.probe-rs-test]
workspace = true
optional = true
