[package]
name = "hive-db"
version = "0.1.0"
edition = "2021"
authors = ["TeyKey1"]
repository = "https://github.com/probe-rs/hive-software"
description = "The sled database used for Hive. This lib contains helper functions to create typed keys and implements automatic data (de)serialization from and to the database."
readme = "README.md"

[features]
test = []

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
trybuild = "1.0"
lazy_static = "1.4"
serial_test = "0.7"
