[package]
name = "hive-db"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
# due to https://github.com/rust-lang/rust/pull/115822
authors = ["TeyKey1"]
repository = "https://github.com/probe-rs/hive-software"
description = "The sled database used for Hive. This lib contains helper functions to create typed keys and implements automatic data (de)serialization from and to the database."
readme = "README.md"

[features]
test = []

[dependencies]
bincode = { workspace = true, features = ["serde"] }
sled = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
trybuild = { workspace = true }
lazy_static = { workspace = true }
serial_test = { workspace = true }
