[package]
name = "hive"
version = "0.1.0"
edition = "2021"
authors = ["TeyKey1"]
repository = "https://github.com/probe-rs/hive-software"
description = "Hive cli which allows testing of probe-rs code directly in the terminal"
readme = "README.md"

[dependencies]
comm-types = { path = "../comm-types/", features = ["test", "hardware"] }
clap = { version = "3.1", features = ["derive", "color", "suggestions"] }
clap-verbosity-flag = "1.0"
colored = "2.0"
validators = "0.24"
dialoguer = "0.10"
indicatif = "0.16"
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
directories = "4.0"
serde_json = "1.0"
cargo_toml = "0.11"
ignore = "0.4"
reqwest = { version = "0.11", features = [
    "blocking",
    "json",
    "multipart",
    "native-tls",
] }
tungstenite = { version = "0.17", features = ["native-tls"] }
tar = "0.4"
native-tls = "0.2"
pathdiff = "0.2"
prettytable-rs = "0.8"
