[package]
name = "hive"
version = "0.1.0"
edition = "2021"
authors = ["TeyKey1"]
repository = "https://github.com/probe-rs/hive-software"
description = "Hive cli which allows testing of probe-rs code directly in the terminal"
readme = "README.md"

[dependencies]
comm-types = { path = "../comm-types/", features = [
    "test",
    "hardware",
    "token",
] }
clap = { workspace = true, features = ["derive", "color", "suggestions"] }
clap-verbosity-flag = { workspace = true }
colored = { workspace = true }
validators = "0.24"
dialoguer = { workspace = true }
indicatif = "0.16"
anyhow = { workspace = true }
log = { workspace = true }
pretty_env_logger = "0.4"
serde = { workspace = true, features = ["derive"] }
directories = "4.0"
serde_json = { workspace = true }
cargo_toml = "0.19"
ignore = "0.4"
reqwest = { version = "0.11", features = [
    "blocking",
    "json",
    "multipart",
    "native-tls",
] }
http = "0.2"
tungstenite = { version = "0.17", features = ["native-tls"] }
native-tls = "0.2"
pathdiff = "0.2"
prettytable-rs = "0.8"
fs_extra = "1.2"
thiserror = { workspace = true }
toml = "0.8"
git2 = "0.14"
keyring = "2.3"
