[package]
name = "hive"
version = "0.1.0"
edition = "2024"
authors = ["TeyKey1"]
repository = "https://github.com/probe-rs/hive-software"
description = "Hive cli which allows testing of probe-rs code directly in the terminal"
readme = "README.md"

[dependencies]
comm-types = { path = "../comm-types/", features = [
    "test",
    "hardware",
    "token",
] }
clap = { workspace = true, features = ["derive", "color", "suggestions"] }
clap-verbosity-flag = { workspace = true }
colored = { workspace = true }
validators = "0.25"
dialoguer = { workspace = true }
indicatif = "0.18"
anyhow = { workspace = true }
log = { workspace = true }
pretty_env_logger = "0.5"
serde = { workspace = true, features = ["derive"] }
directories = "6.0"
serde_json = { workspace = true }
cargo_toml = "0.22"
ignore = "0.4"
reqwest = { version = "0.13", features = [
    "blocking",
    "json",
    "multipart",
    "native-tls",
] }
http = { workspace = true }
tungstenite = { version = "0.28", features = ["native-tls"] }
native-tls = "0.2"
pathdiff = "0.2"
prettytable-rs = "0.10"
fs_extra = "1.3"
thiserror = { workspace = true }
toml = "0.8"
git2 = "0.20"
keyring = "3.6"

[lints]
workspace = true
