[package]
name = "ll-api"
version = "0.1.0"
edition = "2021"
authors = ["TeyKey1"]
repository = "https://github.com/probe-rs/hive-software"
description = "Low level API for controlling the Hive hardware"
readme = "README.md"

[dependencies]
comm-types = {path = "../comm-types/", features=["hardware"]}
pca9535 = {version="1.0", features=["std"]}
rppal = "0.13.1"
embedded-hal = "=1.0.0-alpha.5"
thiserror = "1.0"
retry = "1.3"