[package]
name = "ll-api"
version = "0.1.0"
edition = "2021"
authors = ["TeyKey1"]
repository = "https://github.com/probe-rs/hive-software"
description = "Low level API for controlling the Hive hardware"
readme = "README.md"

[dependencies]
comm-types = { path = "../comm-types/", features = ["hardware"] }
pca9535 = { version = "~1.2", features = ["std"] }
rppal = "0.14"
embedded-hal = "=1.0.0-alpha.9"
thiserror = "1.0"
retry = "1.3"
