[package]
name = "ll-api"
version = "0.1.0"
edition = "2024"
authors = ["TeyKey1"]
repository = "https://github.com/probe-rs/hive-software"
description = "Low level API for controlling the Hive hardware"
readme = "README.md"

[dependencies]
comm-types = { path = "../comm-types/", features = ["hardware"] }
pca9535 = { workspace = true, features = ["std"] }
rppal = { workspace = true }
embedded-hal = { workspace = true }
thiserror = { workspace = true }
retry = { workspace = true }

[lints]
workspace = true
