[package]
name = "monitor"
version = "0.1.0"
edition = "2021"
authors = ["TeyKey1"]
repository = "https://github.com/probe-rs/hive-software"
description = "Hive monitor which handles all external communication, prepares the test environment and starts the test runner."
readme = "README.md"

[dependencies]
comm-types = { path = "../comm-types/", features = ["cbor", "ipc", "auth"] }
controller = { path = "../controller/" }
hive-db = { path = "../hive-db/" }
log = "0.4"
tokio = { version = "1.17", features = ["rt", "sync", "fs"] }
axum = { version = "0.5", features = ["multipart"] }
axum-server = { version = "0.4", features = ["tls-rustls"] }
axum-macros = "0.2"
hyper = "0.14"
tower = "0.4"
tower-http = { version = "0.3", features = ["fs"] }
http-body = "0.4"
tower-cookies = { version = "0.6", features = ["signed"] }
cookie = "0.16"
async-graphql = { version = "3.0" }
async-graphql-axum = "3.0"
futures = "0.3"
ciborium = "0.2"
serde_json = "1.0"
lazy_static = "1.4"
shared-bus = { git = "https://github.com/TeyKey1/shared-bus.git", rev = "046dc03" }
rppal = { version = "0.13.0", features = ["hal"] }
sled = "0.34"
serde = "1.0"
probe-rs = "0.12"
thiserror = "1.0"
uid = "0.1"
argon2 = "0.4"
jsonwebtoken = "8.1"
anyhow = "1.0"
clap = { version = "3.1", features = ["derive", "color", "suggestions"] }
clap-verbosity-flag = "1.0"
dialoguer = "0.10"
rand_chacha = "0.3"
base64 = "0.13"
ring = "0.16"
crossbeam-utils = "0.8"
tar = "0.4"
cargo_toml = "0.11"


[dev-dependencies]
hive-db = { path = "../hive-db/", features = ["test"] }
serial_test = "0.7"
tower = "0.4"
tokio = { version = "1.17", features = ["macros"] }
multipart = { version = "0.8", package = "hyper-multipart-rfc7578" }
mime = "0.3"
