[package]
name = "monitor"
version = "0.1.0"
edition = "2021"
authors = ["TeyKey1"]
repository = "https://github.com/probe-rs/hive-software"
description = "Hive monitor which handles all external communication, prepares the test environment and starts the test runner."
readme = "README.md"

[dependencies]
comm-types = { path = "../comm-types/", features = [
    "bincode",
    "ipc",
    "auth",
    "token",
] }
controller = { path = "../controller/", features = ["monitor"] }
hive-db = { path = "../hive-db/" }
log = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "fs", "signal"] }
axum = { workspace = true, features = ["multipart", "ws", "macros"] }
axum-server = { version = "0.4", features = ["tls-rustls"] }
axum-extra = "0.7"
hyper = { workspace = true }
tower = { workspace = true, features = ["limit", "load-shed", "buffer"] }
tower-http = { version = "0.3", features = ["fs", "limit"] }
http-body = "0.4"
tower-cookies = { version = "0.6", features = ["signed"] }
cookie = "0.16"
async-graphql = { workspace = true }
async-graphql-axum = "5.0"
futures = "0.3"
serde_json = { workspace = true }
lazy_static = { workspace = true }
embedded-hal-bus = { workspace = true }
rppal = { workspace = true, features = ["hal"] }
sled = { workspace = true }
serde = { workspace = true }
probe-rs = { workspace = true }
thiserror = { workspace = true }
argon2 = "0.4"
jsonwebtoken = "8.1"
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "color", "suggestions"] }
clap-verbosity-flag = { workspace = true }
dialoguer = { workspace = true }
rand = "0.8"
rand_chacha = "0.3"
base64 = "0.13"
ring = "0.16"
crossbeam-utils = "0.8"
cached = "0.34"
wait-timeout = "0.2"
command-fds = "0.2"
users = "0.11"
sys-info = "0.9"
chrono = { workspace = true }

[dev-dependencies]
hive-db = { path = "../hive-db/", features = ["test"] }
serial_test = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
multipart = { version = "0.8", package = "hyper-multipart-rfc7578" }
mime = "0.3"
bincode = { workspace = true, features = ["serde"] }
