[package]
name = "monitor"
version = "0.1.0"
edition = "2024"
authors = ["TeyKey1"]
repository = "https://github.com/probe-rs/hive-software"
description = "Hive monitor which handles all external communication, prepares the test environment and starts the test runner."
readme = "README.md"

[dependencies]
comm-types = { path = "../comm-types/", features = [
    "bincode",
    "ipc",
    "auth",
    "token",
] }
controller = { path = "../controller/", features = ["monitor"] }
hive-db = { path = "../hive-db/" }
log = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "fs", "signal"] }
axum = { workspace = true, features = ["multipart", "ws", "macros"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
axum-extra = { version = "0.12", features = ["routing"] }
hyper = { workspace = true }
tower = { workspace = true, features = ["limit", "load-shed", "buffer"] }
tower-http = { version = "0.6", features = ["fs", "limit"] }
http-body = "1.0"
tower-cookies = { version = "0.11", features = ["signed"] }
cookie = "0.18"
async-graphql = { workspace = true }
async-graphql-axum = "7.0"
serde_json = { workspace = true }
lazy_static = { workspace = true }
embedded-hal-bus = { workspace = true }
rppal = { workspace = true, features = ["hal"] }
sled = { workspace = true }
serde = { workspace = true }
probe-rs = { workspace = true }
thiserror = { workspace = true }
argon2 = "0.5"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "color", "suggestions"] }
clap-verbosity-flag = { workspace = true }
dialoguer = { workspace = true }
rand = "0.8"
rand_chacha = "0.3"
base64 = "0.22"
ring = "0.16"
crossbeam-utils = "0.8"
cached = "0.56"
command-fds = "0.2"
sys-info = "0.9"
chrono = { workspace = true }
nix = { workspace = true, features = ["user", "fs"] }
timeout-readwrite = "0.4"

[dev-dependencies]
hive-db = { path = "../hive-db/", features = ["test"] }
serial_test = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
multipart = { version = "0.9", package = "hyper-multipart-rfc7578" }
mime = "0.3"
bincode = { workspace = true, features = ["serde"] }

[lints]
workspace = true
