[package]
name = "runner"
version = "0.1.0"
edition = "2021"
authors = ["TeyKey1"]
repository = "https://github.com/probe-rs/hive-software"
description = "Hive test runner"
readme = "README.md"

[dependencies]
controller = {path = "../controller/", features = ["runner"]}
comm-types = {path = "../comm-types/", features = ["bincode", "ipc"]}
hive-test = {path = "../hive-test/"}
ll-api = {path = "../ll-api/"}
log = "0.4"
rppal = { version = "0.14", features = ["hal"] }
shared-bus = "=0.2.5"
lazy_static = "1.4"
inventory = "0.2"
tokio = {version  = "1.17", features = ["rt", "sync", "macros"]}
axum = "0.6"
tower = "0.4"
hyper = {version = "0.14", features = ["client"]}
hurdles = "1.0"
antidote = "1.0"
tokio-retry = "0.3"
anyhow = "1.0"
backtrace = "0.3"
wildmatch = "2.1"

# probe-rs version which is being tested
probe-rs-test = { package = "probe-rs", path = "../probe-rs-testcandidate/probe-rs/" }