[package]
name = "runner"
version = "0.1.0"
edition = "2024"
authors = ["TeyKey1"]
repository = "https://github.com/probe-rs/hive-software"
description = "Hive test runner"
readme = "README.md"

[dependencies]
controller = { path = "../controller/", features = ["runner"] }
comm-types = { path = "../comm-types/", features = ["bincode", "ipc"] }
hive-test = { path = "../hive-test/" }
ll-api = { path = "../ll-api/" }
log = { workspace = true }
rppal = { workspace = true, features = ["hal"] }
embedded-hal-bus = { workspace = true }
lazy_static = { workspace = true }
inventory = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "macros"] }
axum = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true, features = ["client"] }
hurdles = "1.0"
antidote = { workspace = true }
tokio-retry = "0.3"
anyhow = { workspace = true }
backtrace = "0.3"
wildmatch = "2.6"

# probe-rs version which is being tested
probe-rs-test = { workspace = true }

[lints]
workspace = true
